--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -30,12 +30,12 @@
         <p>Complete Media Database Management</p>
     </div>
     <div class="nav-buttons">
-        <a href="/admin">Home</a>
+        <a href="/">Home</a>
         <a href="/admin/add_movie">Add Movie</a>
         <a href="/admin/add_tv">Add TV Series</a>
         <a href="/admin/search_and_edit">Search & Edit</a>
         <a href="/api/media">Public API</a>
-        <a href="#">API Docs</a>
+        <a href="/api/docs">API Docs</a>
     </div>
 </body>
 </html>
