--- a/templates/search_and_edit.html
+++ b/templates/search_and_edit.html
@@ -67,7 +67,7 @@
         }
 
         function editMedia(id) {
-            // Correctly navigates to the edit page with the media ID
+            // This is the key fix: It redirects to the edit page with the media's ID.
             window.location.href = `/admin/edit?id=${id}`;
         }
 
